<resources>
    <string name="app_name" translatable="false">premierprojetcourandroid</string>
    <string name="ma_chaine">Hello</string>
    <string name="jaime">J\'aime</string>
    <string name="jaimepas">J\'aime Pas</string>
    <string name="compl_ment">Complément :</string>
    <string name="annuler">annuler</string>
    <string name="todo">TODO</string>
    <string name="ajouter">ajouter</string>
    <string name="saisir_votre_nom_ici">Saisir votre nom ici</string>
    <string name="valider">Valider</string>
    <string name="next" />
    <string name="le_texte_ici">le texte ici</string>
    <string name="retour">retour</string>
    <string name="next_screen">Next Screen</string>
    <string name="start">Start</string>
    <string name="textview">TextView</string>
    <string name="stop">Stop</string>
    <string name="load">Load</string>
    <string name="button">Button</string>
    <string name="http_www_google_fr">https://www.google.fr</string>
    <string name="https_www_google_fr">https://www.google.fr</string>
    <string name="boutton">Boutton</string>
    <string name="_31410">31410</string>
    <string name="now">now</string>
    <string name="delay">delay</string>
    <string name="cp">cp</string>
    <string name="ville">ville</string>
    <string name="title_activity_maps">Map</string>
</resources>
